--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p style="font-size: 20px; color: rgb(0, 18, 3);">Thông tin của Phạm Tâm suy</p>
     <div class="social-icons">
         <a href="https://www.facebook.com/emdunggboanh/" class="fb-icon"><i class="fab fa-facebook-f"></i></a>
-        <a href="youtube.com/@t.solitude" class="youtube-icon"><i class="fab fa-youtube"></i></a>
+        <a href="https://www.youtube.com/channel/UCre3KTS0cUhhldPnajZRt5w" class="youtube-icon"><i class="fab fa-youtube"></i></a>
     </div>
 
     <div class="pyro"><div class="before"></div><div class="after"></div></div>
