--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <p id="currentDate" style="font-family: 'Pacifico', cursive; color: rgb(203, 47, 47);"></p>
 
-    <h1>Sắp Tết rồi!!! Chỉ còn...</h1>
+    <h1 style="background-image: url(bgg.jpg);">Sắp Tết rồi!!! Chỉ còn...</h1>
     <div id="countdown">
         <div class="countdown-box" id="days">
             <div class="countdown-number" id="daysNumber"></div> 
@@ -47,9 +47,10 @@
         </div>
     </div>
     <h1 style="font-size: 70px; color: rgb(135, 82, 45);">Giáp thìn 2024</h1>
-    <img src="tet-nguyen-dan.png" alt="tet">
-    <p style="font-size: 40px; font-family:'Pacifico', cursive; color: rgb(21, 2, 5);">Lê Thị Mỹ Ngọc</p>
+    <img class="bgtet" src="tet-nguyen-dan.png" alt="tet">
+    <p style="font-size: 40px; font-family:'Pacifico', cursive; color: rgb(21, 2, 5);">Nguyễn Thuý Bình ❤️</p>
     <img src="bao-nhieu-ngay-nua-Tet.jpg" alt="he">
+
 
 
     
