--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
     <p id="currentDate" style="font-family: 'Pacifico', cursive; color: rgb(203, 47, 47);"></p>
-    <div id="clock" style="font-family: 'Pacifico', cursive; color: rgb(203, 47, 47);"></div>
+    <div id="clock" style="color: rgb(9, 7, 1);"></div>
 
     <h1 style="background-image: url(bgg.jpg);">Sắp Tết rồi!!! Chỉ còn...</h1>
     <div id="countdown">
@@ -86,11 +86,15 @@
         var hours = now.getHours();
         var minutes = now.getMinutes();
         var seconds = now.getSeconds();
+        var ampm = hours >= 12 ? 'PM' : 'AM';
 
-        // Chuyển đổi sang định dạng 24 giờ
+        // Chuyển đổi sang định dạng 12 giờ
+        hours = hours % 12;
+        hours = hours ? hours : 12;
+
         var timeString = (hours < 10 ? '0' : '') + hours + ':' +
                           (minutes < 10 ? '0' : '') + minutes + ':' +
-                          (seconds < 10 ? '0' : '') + seconds;
+                          (seconds < 10 ? '0' : '') + seconds + ' ' + ampm;
 
         var clock = document.getElementById('clock');
         clock.innerHTML = 'Giờ hiện tại: ' + timeString;
@@ -98,6 +102,7 @@
 
     setInterval(updateTime, 1000); // cập nhật thời gian sau mỗi giây
 </script>
+
 
 
 
