--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
             <div class="countdown-label">Giây</div>
         </div>
     </div>
-    <h1 style="font-size: 70px; color: rgb(135, 82, 45);">Giáp thìn 2024</h1>
+    <h1 style="font-size: 40px; color: rgb(135, 82, 45);">Giáp thìn 2024</h1>
+    <img class="rong" src="rong.jpg" alt="rong">
     <img class="bgtet" src="tet-nguyen-dan.png" alt="tet">
     <p style="font-size: 40px; font-family:'Pacifico', cursive; color: rgb(21, 2, 5);">zhurong ❤️</p>
     <img src="bao-nhieu-ngay-nua-Tet.jpg" alt="he">
