--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-q7RDBwLc9viEV8kQWd/7PjrFi1/JZifomZCqZQ1n7a1GqXxp06JmzyeBi54Of0OzCCbkFf3/3cc3dAK9qFDnlw==" crossorigin="anonymous" />
     <link rel="stylesheet" href="styles.css">
-    <title>Countdown to Tet 2024</title>
+    <title>Countdown to Tet 2025</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -47,7 +47,7 @@
             <div class="countdown-label">Giây</div>
         </div>
     </div>
-    <h1 style="font-size: 40px; color: rgb(135, 82, 45);">Giáp thìn 2024</h1>
+    <h1 style="font-size: 40px; color: rgb(135, 82, 45);">Ất Tỵ 2025</h1>
     <img class="rong" src="rong.jpg" alt="rong">
     <img class="bgtet" src="tet-nguyen-dan.png" alt="tet">
     <p style="font-size: 40px; font-family:'Pacifico', cursive; color: rgb(21, 2, 5);">zhurong ❤️</p>
@@ -104,7 +104,6 @@
 
     setInterval(updateTime, 1000); // cập nhật thời gian sau mỗi giây
 </script>
-
 
 
 
