--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <h1 style="font-size: 40px; color: rgb(135, 82, 45);">Ất Tỵ 2025</h1>
     <img class="rong" src="rong.jpg" alt="rong">
     <img class="bgtet" src="tet-nguyen-dan.png" alt="tet">
-    <p style="font-size: 40px; font-family:'Pacifico', cursive; color: rgb(21, 2, 5);">zhurong ❤️</p>
+    <p style="font-size: 40px; font-family:'Pacifico', cursive; color: rgb(21, 2, 5);">Lê Thị Mỹ Ngọc (Jin cuteeeeee) ❤️</p>
     <img src="bao-nhieu-ngay-nua-Tet.jpg" alt="he">
 
 
